# erlang-haskell-interface

./: README.md  Test.hs  erlang.cabal
src/Foreign/: Erlang.hs
src/Foreign/Erlang/: Network.hs  Network.lhs  Processes.hs  Server.hs  Types.hs  Utilities.hs
src/Foreign/Erlang/OTP/: Mnesia.hs
